# WeatherForcastLLMUsingERA5_HRM_Llama

./: .gitignore  MLFLOW_GUIDE.md  MLFLOW_VISION2TEXT_GUIDE.md  README.md  README2.md  environment.yml  infer_tinyllama_vision2text.py  infer_visiontexthrm.sh  main.py  pyproject.toml  requirements.txt  start_mlflow_server.py  train_mae.sh  train_visiontext_tinylama.sh  train_visiontexthrm.sh  train_weather.py
dataset/: .cdsapirc.sample  ERA5_all_subdirs_check.ipynb  configure.py  get_era5.py  get_era5_data.py  run.sh
dataset/weather/: weather_april_2024.csv  weather_august_2024.csv  weather_febuary_2024.csv  weather_jan_may_2024.csv  weather_january_2024.csv  weather_march_2024.csv  weather_may_2024.csv
models/: layers.py
models/hrm/: hrm_act_v1.py  hrm_lm_adapter.py
sat_swin_mae/: dataset_era5.py  layers.py  masking.py  model.py  patch_embed.py  train_mae.py  utils.py  window3d.py
tools/: build_hrm_dataset.py  fit_codebook.py
vision_text/: dataset_sat_text.py  infer_hrm_vision2text.py  satswin_adapter.py  train_hrm_vision2text.py  train_tinyllama_vision2text.py  vision_adapter.py
