[project]
name = "weatherforcastwithhrmandsatswinmae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adam-atan2>=0.0.3",
    "argdantic>=1.3.3",
    "cdsapi>=0.7.6",
    "coolname>=2.2.0",
    "dask>=2025.7.0",
    "einops>=0.8.1",
    "geopy>=2.4.1",
    "huggingface-hub>=0.34.4",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.5",
    "netcdf4>=1.7.2",
    "numpy>=2.3.2",
    "omegaconf>=2.3.0",
    "pydantic>=2.11.7",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "wandb>=0.21.1",
    "xarray>=2025.7.1",
]
